Fix the dark mode text colour of the input box for customer codes

--- a/src/css/dashboard/darkmode.scss
+++ b/src/css/dashboard/darkmode.scss
@@ -276,7 +276,6 @@ $white-highlight-box-shadow: inset 0px -1px 1px 0px rgba(0, 0, 0, 0.1),
     }
     &.actions {
       #customerServiceCode {
-        color: $dark-text;
         background-color: $dark-gray-1;
         border-color: $dark-gray-2;
       }
